
syntax = "proto3";

option java_package = "ir.ms.pb";
//option java_outer_classname = "PB";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";
/////////////////////////////////

message PB_Chat {
    int64 ChatId = 1;
    string ChatKey = 3;
    int32 RoomTypeEnumId = 5;
    int32 UserId = 7;
    int32 LastSeqSeen = 9;
    int32 LastSeqDelete = 11;
    int32 PeerUserId = 13;
    int64 GroupId = 15;
    int32 CreatedTime = 17;
    int32 CurrentSeq = 19;
    int64 UpdatedMs = 21;
}

message PB_DirectMessage {
    int64 MessageId = 1;
    string RoomKey = 3;
    int32 UserId = 5;
    int64 MessageFileId = 7;
    int32 MessageTypeEnum = 9;
    string Text = 11;
    int32 Time = 13;
    int32 PeerReceivedTime = 15;
    int32 PeerSeenTime = 17;
    int32 DeliviryStatusEnum = 19;
}

message PB_MessageFile {
    int64 MessageFileId = 1;
    string Name = 3;
    int32 Size = 5;
    int32 FileTypeEnumId = 7;
    int32 Width = 9;
    int32 Height = 11;
    int32 Duration = 13;
    string Extension = 15;
    string HashMd5 = 17;
    int64 HashAccess = 19;
    int32 CreatedSe = 21;
    string ServerSrc = 23;
    string ServerPath = 25;
    string ServerThumbPath = 27;
    string BucketId = 29;
    int32 ServerId = 31;
    int32 CanDel = 33;
}

message PB_User {
    int32 Id = 1;
    string UserName = 3;
    string UserNameLower = 5;
    string FirstName = 7;
    string LastName = 9;
    string About = 11;
    string FullName = 13;
    string AvatarUrl = 15;
    int32 PrivacyProfile = 17;
    string Phone = 19;
    string Email = 21;
    int32 IsDeleted = 23;
    string PasswordHash = 25;
    string PasswordSalt = 27;
    int32 FollowersCount = 29;
    int32 FollowingCount = 31;
    int32 PostsCount = 33;
    int32 MediaCount = 35;
    int32 LikesCount = 37;
    int32 ResharedCount = 39;
    int32 LastActionTime = 41;
    int32 LastPostTime = 43;
    int32 PrimaryFollowingList = 45;
    int32 CreatedTime = 47;
    int32 UpdatedTime = 49;
    string SessionUuid = 51;
    string DeviceUuid = 53;
    string LastWifiMacAddress = 55;
    string LastNetworkType = 57;
    int32 AppVersion = 59;
    int32 LastActivityTime = 61;
    int32 LastLoginTime = 63;
    string LastIpAddress = 65;
}

